kubernetes/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
